dll/win32/msafd/misc/sndrcv.c
@@ -291,6 +291,13 @@ WSPRecv(SOCKET Handle,
                                    NULL,
                                    0);
 
+    /* Non-blocking sockets must wait until data is available */
+    if (Status == STATUS_PENDING && Socket->SharedData->NonBlocking)
+    {
+        if (lpErrno) *lpErrno = WSAEWOULDBLOCK;
+        return SOCKET_ERROR;
+    }
+
     /* Wait for completion of not overlapped */
     if (Status == STATUS_PENDING && lpOverlapped == NULL)
     {
